--- a/react/03-intro-to-react/digital-card-react/src/index.css
+++ b/react/03-intro-to-react/digital-card-react/src/index.css
@@ -1,13 +1,18 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+	color: white;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+a:hover {
+	opacity: .8;
+}
+
+a:active, a:focus {
+	opacity: 1;
 }
