--- a/react/18-final-assignment/src/pages/products-list/index.scss
+++ b/react/18-final-assignment/src/pages/products-list/index.scss
@@ -1,25 +1,9 @@
 .products_list_page {
-  padding: 30px;
   max-width:  1200px;
   margin: 0 auto;
-  h3 {
-    margin-bottom: 20px;
-  }
-  .content {
-    display: flex;
-    justify-content: space-between;
-    .left, .right {
-      padding: 20px;
-      background-color: var(--tertiary-bg-color);
-      width: 100%;
-    }
-    .left {
-      margin-right: 20px;
-      flex: 1;
-    }
+  .left_right {
     .right {
-      width: 300px;
-      margin-left: 20px;
+      width: 450px;
     }
   }
   table {
@@ -43,8 +27,13 @@
           display: none;
         }
         input:checked + label {
-          padding: 10px;
-          background-color: white;
+          border: 1px solid white;
+          transition: all .3s ease;
+          &:after {
+            width: calc(100% - 8px);
+            height: calc(100% - 8px);
+            transition: all .3s ease;
+          }
         }
         label {
           width: 26px;
@@ -53,11 +42,24 @@
           display: block;
           border-radius: 50%;
           background-color: var(--tertiary-bg-color);
+          position: relative;
+          transition: all .1s ease;
+          &:after {
+            position: absolute;
+            display: block;
+            content: '';
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background-color: white;
+            transition: all .1s ease;
+            
+          }
         }
       }
     }
-  }
-  .primary_btn {
-    margin-top: 10px;
   }
 }
