--- a/react/18-final-assignment/src/index.scss
+++ b/react/18-final-assignment/src/index.scss
@@ -1,3 +1,14 @@
+/****************/
+/* variables */
+/****************/
+:root {
+  --primary-bg-color: #567086;
+  --secondary-bg-color: #4e657a;
+  --tertiary-bg-color: #435c70;
+  --highlight-bg-color: #f5a623;
+  --highlight-hover-bg-color: #f5a52322;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -68,7 +79,7 @@ label:active, button:active {
 
 .wrapper_box {
   background-color: var(--tertiary-bg-color);
-  padding: 20px;
+  padding: 30px;
   h3 {
     margin-bottom: 20px;
   }
@@ -92,13 +103,59 @@ label:active, button:active {
   visibility: hidden;
 }
 
-/****************/
-/* variables */
-/****************/
-:root {
-  --primary-bg-color: #567086;
-  --secondary-bg-color: #4e657a;
-  --tertiary-bg-color: #435c70;
-  --highlight-bg-color: #f5a623;
-  --highlight-hover-bg-color: #f5a52322;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  tr {
+    background-color: var(--secondary-bg-color);
+    th {
+      background-color: var(--primary-bg-color);
+      text-align: left;
+    }
+    td, th {
+      padding: 10px;
+      border-bottom: 1px solid var(--tertiary-bg-color);
+      &:last-child {
+        width: 50px;
+      }
+    }
+    td {
+      input {
+        display: none;
+      }
+      input:checked + label {
+        border: 1px solid white;
+        transition: all .3s ease;
+        &:after {
+          width: calc(100% - 8px);
+          height: calc(100% - 8px);
+          transition: all .3s ease;
+        }
+      }
+      label {
+        width: 26px;
+        cursor: pointer;
+        height: 26px;
+        display: block;
+        border-radius: 50%;
+        background-color: var(--tertiary-bg-color);
+        position: relative;
+        transition: all .1s ease;
+        &:after {
+          position: absolute;
+          display: block;
+          content: '';
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          width: 0;
+          height: 0;
+          border-radius: 50%;
+          background-color: white;
+          transition: all .1s ease;
+          
+        }
+      }
+    }
+  }
 }
