Add login and logout functionality

--- a/react/18-final-assignment/src/index.scss
+++ b/react/18-final-assignment/src/index.scss
@@ -57,6 +57,8 @@ input, textarea, select {
   width: 100%;
   border: none;
   text-transform: uppercase;
+  display: block;
+  text-align: center;
 }
 
 label, button {
@@ -158,4 +160,11 @@ table {
       }
     }
   }
+}
+
+.error {
+  color: red;
+  border: 1px solid red;
+  padding: 10px;
+  margin-bottom: 10px;
 }
