--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,123 +2,141 @@
 /* common */
 /* ******* */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 body {
-  font-family: 'Playfair Display', serif;
+	font-family: "Playfair Display", serif;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 a:hover {
-  opacity: 0.9;
+	opacity: 0.9;
 }
 a:active {
-  opacity: 1;
+	opacity: 1;
 }
 .container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 0 20px;
-  /* background: red; */
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 20px;
+	/* background: red; */
 }
 .flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 /* ******* */
 /* header */
 /* ******* */
 header {
-  background: #eee;
-  padding: 5px 0;
+	background: #eee;
+	padding: 5px 0;
 }
 header img {
-  width: 50px;
-  border-radius: 50%;
+	width: 50px;
+	border-radius: 50%;
 }
 header nav a {
-  margin-left: 30px;
+	margin-left: 30px;
+	font-weight: 600;
+	color: #6c6c6c;
+	font-size: 22px;
 }
-header nav a i {
-  margin-right: 5px;
+header nav a:hover {
+	color: #7e7e7e;
+}
+header nav a:active {
+	color: #6c6c6c;
+}
+header nav a.active:hover,
+header nav a.active {
+	color: #2e2e2e;
+}
+header nav a[download] {
+	margin-left: 5px;
 }
 
 /* ******* */
 /* main */
 /* ******* */
 main {
-  min-height: calc(100vh - 145px);
+	min-height: calc(100vh - 145px);
 }
 
 /* ******* */
 /* projects */
 /* ******* */
 .filters {
-  display: flex;
-  margin: 50px 0;
+	display: flex;
+	margin: 50px 0;
 }
 .filters li {
-  background: #eee;
-  padding: 8px 15px;
-  list-style: none;
-  margin-right: 20px;
-  cursor: pointer;
-  user-select: none;
+	background: #eee;
+	padding: 8px 15px;
+	list-style: none;
+	margin-right: 20px;
+	cursor: pointer;
+	user-select: none;
+	font-weight: 600;
 }
 .filters li:hover {
-  opacity: 0.8;
+	opacity: 0.8;
 }
 .filters li:active {
-  opacity: 1;
+	opacity: 1;
 }
 .filters li.active {
-  background: #969696; 
-  color: white;
+	background: #969696;
+	color: white;
 }
 .projects {
-  flex-wrap: wrap;
-  margin-bottom: 100px;
+	flex-wrap: wrap;
+	margin-bottom: 100px;
 }
 .projects .project {
-  background: grey;
-  width: calc(33% - 20px);
-  border: 1px solid #969696;
-  margin-bottom: 20px;
+	width: calc(33% - 20px);
+	border: 1px solid #dbdbdb;
+	margin-bottom: 20px;
+}
+.projects .project p {
+	font-weight: 600;
 }
 .projects .project img {
-  width: 100%;
-  display: block;
+	width: 100%;
+	display: block;
 }
 .projects .project .content {
-  background: white;
-  padding: 20px;
+	background: white;
+	padding: 20px;
 }
 .projects .project .content img {
-  margin-left: 20px;
-  width: 20px;
+	margin-left: 20px;
+	width: 20px;
 }
 
 /* ******* */
 /* footer */
 /* ******* */
 footer {
-  background: #eee;
-  padding: 30px 0;
-  text-align: center;
+	background: #eee;
+	padding: 30px 0;
+	text-align: center;
+	font-weight: 600;
+	font-size: 18px;
 }
 
 /* ******* */
 /* About page */
 /* ******* */
 .about-page {
-  padding: 100px 0;
+	padding: 100px 0;
 }
 .about-page h1 {
-  font-weight: 800;
-  margin-bottom: 40px;
+	font-weight: 800;
+	margin-bottom: 40px;
 }
